updated button colors and more alignment fixes

--- a/src/static/css/styles.sass
+++ b/src/static/css/styles.sass
@@ -2,16 +2,18 @@
     
 $accent-color: #2D5A72
 $accent-hover: rgba(45, 90, 114, 0.65) 
-$primary-color: #FEFEFE
+$custom-color: #FEFEFE
 $secondary-color: #F0F0EF
 $secondary-transparent: rgba(240, 240, 239, 0.664)
 
 
-.btn-primary
+.btn-custom
     border-color: $accent-color
     background-color: $accent-color
-.btn-primary:hover
+    color: white
+.btn-custom:hover
     background-color: $accent-hover
+    color: white
 .fs-7
     font-size: 12px
 
@@ -92,7 +94,7 @@ header
             max-width: 25vw
             min-width: 12em
             height: 100%
-            color: $primary-color
+            color: $custom-color
             padding: 1.5rem 1.5rem
             // border-radius: .25em 0 0 .25em
         .carousel-control-next, 
@@ -120,10 +122,14 @@ header
             margin: 0 auto
             justify-content: center
 
-    &__player
+    &__newsletter
+        min-height: 85vh
         width: 75vw
         // border-top: 3px solid #2D5A72
         padding-top: 3rem
+        .text-wrapper
+            width: 80vw
+            max-width: 50em
     .hr-70
         width: 70vw
     &__cta
@@ -193,6 +199,8 @@ header
     background-color: $secondary-color
 
 .footer
+    height: 100svh
+    height: 100vh
     &__content
         
         p, h6, a
@@ -242,7 +250,7 @@ header
     .main
     .main
         &__hero-section
-            padding: 3rem 1rem 2rem 1rem
+            padding: 3em 2.25em 2em 2.25em
             min-height: 87svh
             min-height: 87vh
             .carousel-page
@@ -275,7 +283,7 @@ header
 @media only screen and (max-width: 48em) 
     header
         .navbar
-            padding: .5em 1.5em
+            padding: .5em 1.5em .5em 2.25em
             // #nav-img-sm, #nav-img-lg
             //     display: none
             // #nav-img-md
@@ -288,6 +296,7 @@ header
             height: 77.77px
     .main
         &__hero-section
+            // padding: 
             .carousel-page
                 flex-direction: column
                 img
